conexion  de la BD a la nube

--- a/proyecto_TBD/appsettings.json
+++ b/proyecto_TBD/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-
-    "MySqlConnection": "Server=localhost;Database=mydb;Uid=root;Pwd=admin;"
-
+    "MySqlConnection": "server=yamanote.proxy.rlwy.net;port=14483;database=railway;user=root;password=ggeUpERGVJUNhQcaArbSvTcqKAmenAWF;"
   }
 }
+
